# TrainSimulator

./: CMakeLists.txt  README.md
SDL2/docs/: README-visualc.md
resources/: SignTemplate.pdn  SignalTemplate.pdn
resources/Signals/Signs/: SignTemplate.pdn
scripts/: main.cpp  objectDrawer.cpp  objectDrawer.h  simulator.cpp  simulator.h  textDrawer.cpp  textDrawer.h
scripts/ai/: ai.cpp  ai.h
scripts/objects/: train.cpp  train.h
scripts/routes/: route.cpp  route.h  routeTest.cpp
scripts/simulator/: objectDrawer.cpp  objectDrawer.h  placementScreen.cpp  placementScreen.h  simulator.cpp  simulator.h  textDrawer.cpp
scripts/simulator/objects/: signal.cpp  signal.h  station.cpp  station.h  train.cpp  train.h
scripts/simulator/routes/: route.cpp  route.h  routeTest.cpp  routeTest.h
scripts/simulator/structs/: dimensions.h  object.cpp  object.h  vector2.h
scripts/structs/: dimensions.cpp  object.cpp  object.h  vector2.cpp
